<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textViewPodaciOKorisniku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information_about_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/dola_sajn"
        style="@style/background_1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/dollar_sign"
        app:layout_constraintTop_toBottomOf="@id/textViewPodaciOKorisniku"
        app:layout_constraintStart_toStartOf="@id/textViewPodaciOKorisniku"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_profil_ime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dola_sajn"
        android:text="@string/name"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/tv_profil_prezime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profil_ime"
        android:text="@string/surname"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"/>

    <TextView
        android:id="@+id/tv_profil_banka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profil_prezime"
        android:text="@string/bank"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/btn_izmeni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="50dp"
        android:text="@string/change"/>

    <Button
        android:id="@+id/btn_odjava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btn_izmeni"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:text="@string/log_out" />

    <TextView
        android:id="@+id/ime_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_profil_ime"
        app:layout_constraintTop_toTopOf="@id/tv_profil_ime"
        android:layout_marginStart="100dp" />

    <TextView
        android:id="@+id/prezime_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/ime_value"
        app:layout_constraintTop_toTopOf="@id/tv_profil_prezime" />

    <TextView
        android:id="@+id/banka_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/prezime_value"
        app:layout_constraintTop_toTopOf="@id/tv_profil_banka" />


</androidx.constraintlayout.widget.ConstraintLayout>
