<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/asdfgh"
            style="@style/defStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/enter_new_income_or_expense"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"/>

    <Spinner
        android:id="@+id/spinner_1"
        style="@style/letters_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@id/asdfgh"
        app:layout_constraintTop_toBottomOf="@id/asdfgh"
        android:layout_marginTop="50dp"
        android:entries="@array/spinner_array"
        android:drawSelectorOnTop="true"/>

    <EditText
        android:id="@+id/editTextUnosFrag"
        style="@style/letters_2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_1"
        app:layout_constraintStart_toStartOf="@id/spinner_1"
        android:layout_marginTop="20dp"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/editTextKolicinaFrag"
        style="@style/letters_2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/editTextUnosFrag"
        app:layout_constraintStart_toStartOf="@id/editTextUnosFrag"
        android:layout_marginTop="20dp"
        android:hint="@string/amount"/>

    <CheckBox
        android:id="@+id/check_box1"
        style="@style/letters_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextKolicinaFrag"
        app:layout_constraintStart_toStartOf="@id/editTextKolicinaFrag"
        android:layout_marginTop="10dp"
        android:text="@string/audio"/>

    <Button
        android:id="@+id/btn_unos_prihoda"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/add_to_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/text_area"
        style="@style/letters_2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:hint="@string/description"
        android:gravity="top"
        android:scrollbars="vertical"
        android:background="@color/design_default_color_secondary_variant"
        app:layout_constraintStart_toStartOf="@id/check_box1"
        app:layout_constraintTop_toBottomOf="@id/check_box1"
        app:layout_constraintBottom_toTopOf="@id/btn_unos_prihoda"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/audio_1"
        style="@style/background_1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@id/check_box1"
        app:layout_constraintTop_toBottomOf="@id/check_box1"
        app:layout_constraintBottom_toTopOf="@id/btn_unos_prihoda"
        android:layout_marginTop="20dp"
        android:src="@drawable/mic_icon"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/audio_play"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="@id/check_box1"
        app:layout_constraintTop_toBottomOf="@id/check_box1"
        app:layout_constraintBottom_toTopOf="@id/btn_unos_prihoda"
        android:layout_marginTop="20dp"
        android:src="@drawable/mic_icon"
        android:visibility="invisible"
        app:tint="@android:color/holo_red_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>
